added projects and resume pages and bootstrap

--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,9 @@
             </div>
         </div>
     </nav>
-    <div class="container" style="text-align:center">
-        Liam Silagan is me
-    </div>
+    <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+    </ul>
 </body>
 </html>
