--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,10 @@
         </div>
     </nav>
     <ul>
-        <li>Project 1</li>
-        <li>Project 2</li>
+        <li><a href="#">Hello World Project</a></li>
+        <li><a href="#">Hello World Project3</a></li>
+        <li><a href="#">Surviving College</a></li>
+        <li><a href="#">Goodbye Project #2</a></li>
     </ul>
 </body>
 </html>
