added link to toso.rocks

--- a/projects.html
+++ b/projects.html
@@ -30,5 +30,12 @@
         <li><a href="#">Surviving College</a></li>
         <li><a href="#">Goodbye Project #2</a></li>
     </ul>
+    <nav class="navbar navbar-expand-md fixed-bottom navbar-dark bg-dark ">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active text-center">
+                <a class="nav-link" href="https://toso.rocks">Onto the next site in the webring!</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
