changed opening toso.rocks to opening in new tab

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-md fixed-bottom navbar-dark bg-dark ">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active text-center">
-                <a class="nav-link" href="https://toso.rocks">Onto the next site in the webring!</a>
+                <a class="nav-link" href="https://toso.rocks" target="_blank">Onto the next site in the webring!</a>
             </li>
         </ul>
     </nav>
