--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liam Silagan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand">Liam Silagan</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -17,25 +17,55 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="/index.html" class="nav-item nav-link active">Home</a>
-                    <a href="/projects.html" class="nav-item nav-link">Projects</a>
-                    <a href="/resume.pdf" class="nav-item nav-link">Resume</a>
+                    <a href="/index.html" class="nav-item nav-link">Home</a>
+                    <a href="/projects.html" class="nav-item nav-link active">Projects</a>
+                    <a href="/resume.html" class="nav-item nav-link">Resume</a>
                 </div>
             </div>
         </div>
     </nav>
-    <ul>
-        <li><a href="#">Hello World Project</a></li>
-        <li><a href="#">Hello World Project3</a></li>
-        <li><a href="#">Surviving College</a></li>
-        <li><a href="#">Goodbye Project #2</a></li>
-    </ul>
-    <nav class="navbar navbar-expand-md fixed-bottom navbar-dark bg-dark ">
+    <main class="container-fluid" style="margin-bottom: 65px">
+        <ul>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+            <li><a href="#">Hello World Project</a></li>
+            <li><a href="#">Hello World Project3</a></li>
+            <li><a href="#">Surviving College</a></li>
+            <li><a href="#">Goodbye Project #2</a></li>
+        </ul>
+    </main>
+    <navbar class="navbar fixed-bottom navbar-expand-md navbar-dark bg-dark ">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active text-center">
                 <a class="nav-link" href="https://toso.rocks" target="_blank">Onto the next site in the webring!</a>
             </li>
         </ul>
-    </nav>
+    </navbar>
 </body>
 </html>
