--- a/resume.html
+++ b/resume.html
@@ -17,17 +17,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="/index.html" class="nav-item nav-link active">Home</a>
+                    <a href="/index.html" class="nav-item nav-link">Home</a>
                     <a href="/projects.html" class="nav-item nav-link">Projects</a>
-                    <a href="/resume.html" class="nav-item nav-link">Resume</a>
+                    <a href="/resume.html" class="nav-item nav-link active">Resume</a>
                 </div>
             </div>
         </div>
     </nav>
-    <main class="container-fluid" style="margin-bottom: 65px">
-        <p class="text-center display-1"></p>
-        <p class="lead">I am a student at the University of Texas at Dallas pursuing a Masters in Computer Engineering</p>
-        <p>I have no friends</p>
+    <main class="container-fluid bg-dark">
+        <center>
+            <object data="resume.pdf" type="application/pdf" width="100%" height="800px"> 
+            </object>
+        </center>
     </main>
 </body>
 </html>
