--- a/resume.html
+++ b/resume.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="bg-light">
     <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand">Liam Silagan</a>
+            <a class="navbar-brand">Liam</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,11 +24,15 @@
             </div>
         </div>
     </nav>
-    <main class="container-fluid bg-dark">
-        <center>
-            <object data="resume.pdf" type="application/pdf" width="100%" height="800px"> 
-            </object>
-        </center>
+    <main class="container-fluid">
+        <h1></h1>
     </main>
+    
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container mt-3" style="display: flex">
+            <h1 class="text-light">Liam Silagan</h1>
+            <h3 class="text-light">Links</h3>
+        </div>
+    </nav>
 </body>
 </html>
