--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </nav>
     <main class="container-fluid" style="margin-bottom: 65px">
         <p class="text-center display-1"></p>
-        <p class="lead">I am a student at the University of Texas at Dallas pursuing a Masters in Computer Engineering</p>
-        <p>I have no friends</p>
+        <p class="lead">I am a student at the University of Texas at Dallas pursuing a Masters in Computer Engineering with a focus on Computer Systems.</p>
     </main>
 </body>
 </html>
