--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liam Silagan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Liam Silagan - Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="bg-light">
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark fs-2">
         <div class="container-fluid">
-            <a class="navbar-brand">Liam</a>
+            <a class="navbar-brand fs-1">Liam</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="/index.html" class="nav-item nav-link active">Home</a>
+                    <a href="/" class="nav-item nav-link active">Home</a>
                     <a href="/projects.html" class="nav-item nav-link">Projects</a>
                     <a href="/resume.html" class="nav-item nav-link">Resume</a>
                 </div>
@@ -25,8 +26,7 @@
         </div>
     </nav>
     <main class="container-fluid" style="margin-bottom: 65px">
-        <p class="text-center display-1"></p>
-        <p class="lead">I am a student at the University of Texas at Dallas pursuing a Masters in Computer Engineering with a focus on Computer Systems.</p>
+        <p class="lead fs-1 text-center" style="vertical-align: middle;">Welcome to Liam Silagan's Website</p>
     </main>
 </body>
 </html>
