--- a/projects.html
+++ b/projects.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liam Silagan</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Liam Silagan - Projects</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link href="https://pagecdn.io/lib/easyfonts/fonts.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="bg-light">
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark fs-2">
         <div class="container-fluid">
-            <a class="navbar-brand">Liam</a>
+            <a class="navbar-brand fs-1">Liam</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="/index.html" class="nav-item nav-link">Home</a>
+                    <a href="/" class="nav-item nav-link">Home</a>
                     <a href="/projects.html" class="nav-item nav-link active">Projects</a>
                     <a href="/resume.html" class="nav-item nav-link">Resume</a>
                 </div>
             </div>
         </div>
     </nav>
-    <main class="container-fluid mt-3" style="margin-bottom: 65px">
+    <main class="container-fluid mt-3" style="margin-bottom: 65px" id="main-content">
         <div class="container-fluid">
             <ul class="nav nav-justified nav-tabs mb-3" id="myTab" role="tablist">
                 <li class="nav-item font-monospace fs-4" role="presentation">
@@ -130,6 +132,7 @@
                     <p class="fs-5">YAYAYA is an original programming language based around the ever popular Brainfuck (and other similar esolangs). The intent behind the language was to make it fully pronounceable with the syllable "YA" (although most programs will sound the exact same when enunciated).</p> 
                     <p class="fs-5">The attached GitHub link also includes a compiler I wrote which parses any specified file and displays the output of the program.</p>
                     <p class="fs-5">Like Brainfuck, there are eight different commands that manipulate data pointers and an instruction pointer. The biggest difference is that YAYAYA contains a delimiter (YAH) which separates each command. Also, all white space is ignored in the parsing of the source code.</p>
+                    <button class="btn btn-dark" onclick="showCompiler()">Open YAYAYA Compiler</button>
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -183,6 +186,23 @@
             </div>
         </div>
     </main>
+    <main class="container-fluid mt-3" id="compiler-content" style="display:none;">
+        <button class="btn btn-dark border border-1" type="button" onclick="hideCompiler()">
+            <i class="bi bi-arrow-return-left me-2"></i><span id="filter-status">Return to Projects</span>
+        </button>
+        <h1 class="text-center">YAYAYA Compiler</h1>
+        <div class="form-group">
+            <label for="codeInput">Type your code here:</label>
+            <textarea class="form-control" id="codeInput" rows="10" style="font-family: 'Courier New', Courier, monospace; font-weight:bolder;"></textarea>
+        </div>
+        <button class="btn btn-dark border border-1 mt-2 mb-2" type="button" onclick="compileCode()">
+            <span class="me-2" id="filter-status">COMPILE</span><i class="bi bi-arrow-bar-right"></i>
+        </button>
+        <div class="form-group">
+            <label for="codeOutput">Type your code here:</label>
+            <textarea class="form-control" id="codeOutput" rows="10" style="font-family: 'Courier New', Courier, monospace; font-weight:bolder;" readonly></textarea>
+        </div>
+    </main>
     <navbar class="navbar fixed-bottom navbar-expand-md navbar-dark bg-dark ">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
@@ -190,5 +210,6 @@
             </li>
         </ul>
     </navbar>
+    <script src="javascript/projects.js"></script>
 </body>
 </html>
