--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
                 <div class="navbar-nav">
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="/projects.html" class="nav-item nav-link">Projects</a>
-                    <a href="/resume.html" class="nav-item nav-link active">Resume</a>
+                    <a href="/resume.pdf" class="nav-item nav-link active">Resume</a>
                 </div>
             </div>
         </div>
