--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
                 <div class="navbar-nav">
                     <a href="/" class="nav-item nav-link">Home</a>
                     <a href="/projects.html" class="nav-item nav-link active">Projects</a>
-                    <a href="/Liam-Silagan-Resume.pdf" class="nav-item nav-link">Resume</a>
+                    <a href="/Liam-Silagan-Resume.pdf" class="nav-item nav-link" target="_blank">Resume</a>
                 </div>
             </div>
         </div>
