--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liam Silagan - Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body class="bg-light">
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark fs-2">
-        <div class="container-fluid">
-            <a class="navbar-brand fs-1">Liam</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav">
-                    <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/projects.html" class="nav-item nav-link">Projects</a>
-                    <a href="/Liam-Silagan-Resume.pdf" class="nav-item nav-link" target="_blank">Resume</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Liam Silagan - Home</title>
+
+        <!--JQUERY-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+        <!--BOOTSTRAP-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+
+        <!--FONTS-->
+        <link rel="preconnect" href="https://api.fonts.coollabs.io" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://api.fonts.coollabs.io/css2?family=Righteous&display=swap" rel="stylesheet" />
+
+        <!--CUSTOM-->
+        <link href="/styles/mainstyles.css" rel="stylesheet" />
+    </head>
+    <body class="bg-light">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fs-2">
+            <div class="container-fluid">
+                <h1 class="navbar-brand fs-1 mb-0 ps-2 pe-4 font-righteous">Liam</h1>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a href="/" class="nav-item nav-link active">Home</a>
+                        <a href="/projects.html" class="nav-item nav-link">Projects</a>
+                        <a href="/Liam-Silagan-Resume.pdf" class="nav-item nav-link" target="_blank">Resume</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    <main class="container-fluid" style="margin-bottom: 65px">
-        <p class="lead fs-1 text-center" style="vertical-align: middle;">Welcome to Liam Silagan's Website</p>
-    </main>
-</body>
+        </nav>
+        <main class="container-fluid" style="margin-bottom: 65px">
+            <p class="lead fs-1 text-center" style="vertical-align: middle">Welcome to Liam Silagan's Website</p>
+        </main>
+    </body>
+
+    <!--BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
