Changed projects.html main container to containter-fluid

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </nav>
-        <main class="container mt-3" style="margin-bottom: 65px" id="main-content">
+        <main class="container-fluid mt-3" style="margin-bottom: 65px" id="main-content">
             <ul class="nav nav-justified nav-tabs mb-3" id="myTab" role="tablist">
                 <li class="nav-item font-monospace fs-4" role="presentation">
                     <button class="nav-link active text-black-50 h-100" id="website-tab" data-bs-toggle="tab" data-bs-target="#website" type="button" role="tab" aria-controls="website" aria-selected="true">THIS WEBSITE</button>
