--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         <link href="/styles/mainstyles.css" rel="stylesheet" />
     </head>
     <body class="bg-light">
-        <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark fs-2">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fs-2">
             <div class="container-fluid">
                 <h1 class="navbar-brand fs-1 mb-0 ps-2 pe-4 font-righteous">Liam</h1>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </nav>
-        <main class="container-fluid mt-3" style="margin-bottom: 65px" id="main-content">
+        <main class="container mt-3" style="margin-bottom: 65px" id="main-content">
             <ul class="nav nav-justified nav-tabs mb-3" id="myTab" role="tablist">
                 <li class="nav-item font-monospace fs-4" role="presentation">
                     <button class="nav-link active text-black-50 h-100" id="website-tab" data-bs-toggle="tab" data-bs-target="#website" type="button" role="tab" aria-controls="website" aria-selected="true">THIS WEBSITE</button>
