Added basketball to about me section

--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
             <div class="row">
                 <h1 class="text-decoration-underline" style="font-variant: small-caps">About Me</h1>
                 <ul class="fs-3 list-group">
-                    <li class="list-group-item">I am a Validation Engineer at Texas Instruments</li>
-                    <li class="list-group-item">I graduated from the University of Texas at Dallas with a Bachelors of Science in Computer Engineering and a Masters of Science in Computer Engineering</li>
-                    <li class="list-group-item">I make video games</li>
+                    <li class="list-group-item">I am a Validation Engineer at Texas Instruments.</li>
+                    <li class="list-group-item">I graduated from the University of Texas at Dallas with a Bachelors of Science in Computer Engineering and a Masters of Science in Computer Engineering.</li>
+                    <li class="list-group-item">I make video games.</li>
+                    <li class="list-group-item">I love watching and playing basketball.</li>
                 </ul>
             </div>
             <br>
