Added video demo of gaming device project

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-lg-5">
-                    <img src="images/profile/liam_profile.webp" class="profile-pic">
+                    <img src="media/profile/liam_profile.webp" class="profile-pic">
                 </div>
             </div>
             <br>
@@ -67,7 +67,7 @@
                     <li class="list-group-item">I am a Validation Engineer at Texas Instruments.</li>
                     <li class="list-group-item">I graduated from the University of Texas at Dallas with a Bachelors of Science in Computer Engineering and a Masters of Science in Computer Engineering.</li>
                     <li class="list-group-item">I make video games.</li>
-                    <li class="list-group-item">I love watching and playing basketball.</li>
+                    <li class="list-group-item">I love basketball.</li>
                 </ul>
             </div>
             <br>
