--- a/projects.html
+++ b/projects.html
@@ -73,9 +73,14 @@
                             <li class="fs-5">Figure out a way to power the device using a battery pack and find a way to recharge the battery</li>
                             <li class="fs-5">Attach the touch pins of the dispaly to the microcontroller in order to enable the ability to develop touch based games</li>
                         </ul>
+                        <h3>Source Code</h3>
                         <p class="fs-5">For now, the code is not publicly available because it's a hacky mess of spaghetti.</p>
+                        <h3>Video Demo</h3>
+                        <video class="w-100" controls>
+                            <source src="media/videos/Gaming_Device_Demo.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
-                    
                 </div>
             </div>
             <div id="completedProjects" class="project-page" style="display:none;">
